manifest/objects/DNBConnect__D_B_Connect_Contact_Profile__c.object
<CustomObject>
    <description>Holds all D&amp;B data fields for the matched contact record</description>
    <fields>
        <fullName>DNBConnect__DUNS_Number__c</fullName>
        <description>The Dun &amp; Bradstreet D-U-N-S Number with which the contact is associated. The D-U-N-S Number is an identification number assigned by Dun &amp; Bradstreet that uniquely identifies the entity in accordance with the Data Universal Numbering System (D-U-N-S).</description>
        <inlineHelpText>The Dun &amp; Bradstreet D-U-N-S Number with which the contact is associated. The D-U-N-S Number is an identification number assigned by Dun &amp; Bradstreet that uniquely identifies the entity in accordance with the Data Universal Numbering System (D-U-N-S).</inlineHelpText>
        <label>D&amp;B Contact DUNS Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBConnect__D_B_Contact_Compliance__c</fullName>
        <formula>HYPERLINK(&quot;https://connect.dnb.com/compliance-insights&quot;, &quot;D&amp;B&apos;s full Compliance Insight Document&quot;, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Click the link to learn more about permissible use of Contact with D&amp;B Compliance Insights.</inlineHelpText>
        <label>D&amp;B Compliance Insights Page</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBConnect__D_B_Contact_ID__c</fullName>
        <description>The Dun &amp; Bradstreet Contact ID is an identification number assigned by Dun &amp; Bradstreet that uniquely identifies the Contact.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Dun &amp; Bradstreet Contact ID is an identification number assigned by Dun &amp; Bradstreet that uniquely identifies the Contact.</inlineHelpText>
        <label>D&amp;B Contact ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DNBConnect__D_B_globalContactKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>D&amp;B Global Contact Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DNBConnect__Family_Name__c</fullName>
        <description>The surname of the individual without suffixes.</description>
        <inlineHelpText>The surname of the individual without suffixes.</inlineHelpText>
        <label>Family Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBConnect__First_Name__c</fullName>
        <description>The given name of the individual. In western cultures this is usually presented first.</description>
        <inlineHelpText>The given name of the individual. In western cultures this is usually presented first.</inlineHelpText>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBConnect__compliance_Insights_description__c</fullName>
        <label>Compliance Insights Description</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <label>D&amp;B Connect Contact Profile</label>
    <nameField>
        <label>D&amp;B Connect Contact Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>D&amp;B Connect Contact Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>